syntax.output
State 180 conflicts: 1 shift/reduce


Grammar

    0 $accept: program "EOF"

    1 program: header declarations subprograms comp_statement "."

    2 header: "program" "id" ";"

    3 declarations: constdefs typedefs vardefs

    4 constdefs: "const" constant_defs ";"
    5          | %empty

    6 constant_defs: constant_defs ";" "id" "=" expression
    7              | "id" "=" expression

    8 expression: expression "> or >= or < or <= or <>" expression
    9           | expression "=" expression
   10           | expression "in" expression
   11           | expression "or" expression
   12           | expression "+ or -" expression
   13           | expression "* or / or div or mod or and" expression
   14           | "+ or -" expression
   15           | "not" expression
   16           | variable
   17           | "id" "(" expressions ")"
   18           | constant
   19           | "(" expression ")"
   20           | setexpression

   21 variable: "id"
   22         | variable "." "id"
   23         | variable "[" expressions "]"

   24 expressions: expressions "," expression
   25            | expression

   26 constant: "iconst"
   27         | "rconst"
   28         | "bconst"
   29         | "cconst"

   30 setexpression: "[" elexpressions "]"
   31              | "[" "]"

   32 elexpressions: elexpressions "," elexpression
   33              | elexpression

   34 elexpression: expression ".." expression
   35             | expression

   36 typedefs: "type" type_defs ";"
   37         | %empty

   38 type_defs: type_defs ";" "id" "=" type_def
   39          | "id" "=" type_def

   40 type_def: "array" "[" dims "]" "of" typename
   41         | "set" "of" typename
   42         | "record" fields "end"
   43         | "(" identifiers ")"
   44         | limit ".." limit

   45 dims: dims "," limits
   46     | limits

   47 limits: limit ".." limit
   48       | "id"

   49 limit: "+ or -" "iconst"
   50      | "+ or -" "id"
   51      | "iconst"
   52      | "cconst"
   53      | "bconst"
   54      | "id"

   55 typename: standard_type
   56         | "id"

   57 standard_type: "integer"
   58              | "real"
   59              | "boolean"
   60              | "char"

   61 fields: fields ";" field
   62       | field

   63 field: identifiers ":" typename

   64 identifiers: identifiers "," "id"
   65            | "id"

   66 vardefs: "var" variable_defs ";"
   67        | %empty

   68 variable_defs: variable_defs ";" identifiers ":" typename
   69              | identifiers ":" typename

   70 subprograms: subprograms subprogram ";"
   71            | %empty

   72 subprogram: sub_header ";" "forward"
   73           | sub_header ";" declarations subprograms comp_statement

   74 sub_header: "function" "id" formal_parameters ":" standard_type
   75           | "procedure" "id" formal_parameters
   76           | "function" "id"

   77 formal_parameters: "(" parameter_list ")"
   78                  | %empty

   79 parameter_list: parameter_list ";" pass identifiers ":" typename
   80               | pass identifiers ":" typename

   81 pass: "var"
   82     | %empty

   83 comp_statement: "begin" statements "end"

   84 statements: statements ";" statement
   85           | statement

   86 statement: assignment
   87          | if_statement
   88          | while_statement
   89          | for_statement
   90          | with_statement
   91          | subprogram_call
   92          | io_statement
   93          | comp_statement
   94          | %empty

   95 assignment: variable ":=" expression
   96           | variable ":=" "string"

   97 if_statement: "if" expression "then" statement if_tail

   98 if_tail: "else" statement
   99        | %empty

  100 while_statement: "while" expression "do" statement

  101 for_statement: "for" "id" ":=" iter_space "do" statement

  102 iter_space: expression "to" expression
  103           | expression "downto" expression

  104 with_statement: "with" variable "do" statement

  105 subprogram_call: "id"
  106                | "id" "(" expressions ")"

  107 io_statement: "read" "(" read_list ")"
  108             | "write" "(" write_list ")"

  109 read_list: read_list "," read_item
  110          | read_item

  111 read_item: variable

  112 write_list: write_list "," write_item
  113           | write_item

  114 write_item: expression
  115           | "string"


Terminals, with rules where they appear

    "EOF" (0) 0
    error (256)
    "program" (258) 2
    "const" (259) 4
    "type" (260) 36
    "array" (261) 40
    "set" (262) 41
    "of" (263) 40 41
    "record" (264) 42
    "var" (265) 66 81
    "forward" (266) 72
    "function" (267) 74 76
    "procedure" (268) 75
    "integer" (269) 57
    "real" (270) 58
    "boolean" (271) 59
    "char" (272) 60
    "begin" (273) 83
    "end" (274) 42 83
    "if" (275) 97
    "then" (276) 97
    "else" (277) 98
    "while" (278) 100
    "do" (279) 100 101 104
    "for" (280) 101
    "downto" (281) 103
    "to" (282) 102
    "with" (283) 104
    "read" (284) 107
    "write" (285) 108
    "id" <strval> (286) 2 6 7 17 21 22 38 39 48 50 54 56 64 65 74 75 76 101 105 106
    "iconst" <intval> (287) 26 49 51
    "rconst" <floatval> (288) 27
    "bconst" <boolean> (289) 28 53
    "cconst" <charval> (290) 29 52
    "> or >= or < or <= or <>" (291) 8
    "+ or -" (292) 12 14 49 50
    "or" (293) 11
    "* or / or div or mod or and" (294) 13
    "not" (295) 15
    "in" (296) 10
    "string" (297) 96 115
    "(" (298) 17 19 43 77 106 107 108
    ")" (299) 17 19 43 77 106 107 108
    ";" (300) 2 4 6 36 38 61 66 68 70 72 73 79 84
    "." (301) 1 22
    "," (302) 24 32 45 64 109 112
    "=" (303) 6 7 9 38 39
    ":" (304) 63 68 69 74 79 80
    "[" (305) 23 30 31 40
    "]" (306) 23 30 31 40
    ":=" (307) 95 96 101
    ".." (308) 34 44 47


Nonterminals, with rules where they appear

    $accept (54)
        on left: 0
    program (55)
        on left: 1
        on right: 0
    header (56)
        on left: 2
        on right: 1
    declarations (57)
        on left: 3
        on right: 1 73
    constdefs (58)
        on left: 4 5
        on right: 3
    constant_defs (59)
        on left: 6 7
        on right: 4 6
    expression (60)
        on left: 8 9 10 11 12 13 14 15 16 17 18 19 20
        on right: 6 7 8 9 10 11 12 13 14 15 19 24 25 34 35 95 97 100 102 103 114
    variable (61)
        on left: 21 22 23
        on right: 16 22 23 95 96 104 111
    expressions (62)
        on left: 24 25
        on right: 17 23 24 106
    constant (63)
        on left: 26 27 28 29
        on right: 18
    setexpression (64)
        on left: 30 31
        on right: 20
    elexpressions (65)
        on left: 32 33
        on right: 30 32
    elexpression (66)
        on left: 34 35
        on right: 32 33
    typedefs (67)
        on left: 36 37
        on right: 3
    type_defs (68)
        on left: 38 39
        on right: 36 38
    type_def (69)
        on left: 40 41 42 43 44
        on right: 38 39
    dims (70)
        on left: 45 46
        on right: 40 45
    limits (71)
        on left: 47 48
        on right: 45 46
    limit (72)
        on left: 49 50 51 52 53 54
        on right: 44 47
    typename (73)
        on left: 55 56
        on right: 40 41 63 68 69 79 80
    standard_type (74)
        on left: 57 58 59 60
        on right: 55 74
    fields (75)
        on left: 61 62
        on right: 42 61
    field (76)
        on left: 63
        on right: 61 62
    identifiers (77)
        on left: 64 65
        on right: 43 63 64 68 69 79 80
    vardefs (78)
        on left: 66 67
        on right: 3
    variable_defs (79)
        on left: 68 69
        on right: 66 68
    subprograms (80)
        on left: 70 71
        on right: 1 70 73
    subprogram (81)
        on left: 72 73
        on right: 70
    sub_header (82)
        on left: 74 75 76
        on right: 72 73
    formal_parameters (83)
        on left: 77 78
        on right: 74 75
    parameter_list (84)
        on left: 79 80
        on right: 77 79
    pass (85)
        on left: 81 82
        on right: 79 80
    comp_statement (86)
        on left: 83
        on right: 1 73 93
    statements (87)
        on left: 84 85
        on right: 83 84
    statement (88)
        on left: 86 87 88 89 90 91 92 93 94
        on right: 84 85 97 98 100 101 104
    assignment (89)
        on left: 95 96
        on right: 86
    if_statement (90)
        on left: 97
        on right: 87
    if_tail (91)
        on left: 98 99
        on right: 97
    while_statement (92)
        on left: 100
        on right: 88
    for_statement (93)
        on left: 101
        on right: 89
    iter_space (94)
        on left: 102 103
        on right: 101
    with_statement (95)
        on left: 104
        on right: 90
    subprogram_call (96)
        on left: 105 106
        on right: 91
    io_statement (97)
        on left: 107 108
        on right: 92
    read_list (98)
        on left: 109 110
        on right: 107 109
    read_item (99)
        on left: 111
        on right: 109 110
    write_list (100)
        on left: 112 113
        on right: 108 112
    write_item (101)
        on left: 114 115
        on right: 112 113


State 0

    0 $accept: • program "EOF"

    "program"  shift, and go to state 1

    program  go to state 2
    header   go to state 3


State 1

    2 header: "program" • "id" ";"

    "id"  shift, and go to state 4


State 2

    0 $accept: program • "EOF"

    "EOF"  shift, and go to state 5


State 3

    1 program: header • declarations subprograms comp_statement "."

    "const"  shift, and go to state 6

    $default  reduce using rule 5 (constdefs)

    declarations  go to state 7
    constdefs     go to state 8


State 4

    2 header: "program" "id" • ";"

    ";"  shift, and go to state 9


State 5

    0 $accept: program "EOF" •

    $default  accept


State 6

    4 constdefs: "const" • constant_defs ";"

    "id"  shift, and go to state 10

    constant_defs  go to state 11


State 7

    1 program: header declarations • subprograms comp_statement "."

    $default  reduce using rule 71 (subprograms)

    subprograms  go to state 12


State 8

    3 declarations: constdefs • typedefs vardefs

    "type"  shift, and go to state 13

    $default  reduce using rule 37 (typedefs)

    typedefs  go to state 14


State 9

    2 header: "program" "id" ";" •

    $default  reduce using rule 2 (header)


State 10

    7 constant_defs: "id" • "=" expression

    "="  shift, and go to state 15


State 11

    4 constdefs: "const" constant_defs • ";"
    6 constant_defs: constant_defs • ";" "id" "=" expression

    ";"  shift, and go to state 16


State 12

    1 program: header declarations subprograms • comp_statement "."
   70 subprograms: subprograms • subprogram ";"

    "function"   shift, and go to state 17
    "procedure"  shift, and go to state 18
    "begin"      shift, and go to state 19

    subprogram      go to state 20
    sub_header      go to state 21
    comp_statement  go to state 22


State 13

   36 typedefs: "type" • type_defs ";"

    "id"  shift, and go to state 23

    type_defs  go to state 24


State 14

    3 declarations: constdefs typedefs • vardefs

    "var"  shift, and go to state 25

    $default  reduce using rule 67 (vardefs)

    vardefs  go to state 26


State 15

    7 constant_defs: "id" "=" • expression

    "id"      shift, and go to state 27
    "iconst"  shift, and go to state 28
    "rconst"  shift, and go to state 29
    "bconst"  shift, and go to state 30
    "cconst"  shift, and go to state 31
    "+ or -"  shift, and go to state 32
    "not"     shift, and go to state 33
    "("       shift, and go to state 34
    "["       shift, and go to state 35

    expression     go to state 36
    variable       go to state 37
    constant       go to state 38
    setexpression  go to state 39


State 16

    4 constdefs: "const" constant_defs ";" •
    6 constant_defs: constant_defs ";" • "id" "=" expression

    "id"  shift, and go to state 40

    $default  reduce using rule 4 (constdefs)


State 17

   74 sub_header: "function" • "id" formal_parameters ":" standard_type
   76           | "function" • "id"

    "id"  shift, and go to state 41


State 18

   75 sub_header: "procedure" • "id" formal_parameters

    "id"  shift, and go to state 42


State 19

   83 comp_statement: "begin" • statements "end"

    "begin"  shift, and go to state 19
    "if"     shift, and go to state 43
    "while"  shift, and go to state 44
    "for"    shift, and go to state 45
    "with"   shift, and go to state 46
    "read"   shift, and go to state 47
    "write"  shift, and go to state 48
    "id"     shift, and go to state 49

    $default  reduce using rule 94 (statement)

    variable         go to state 50
    comp_statement   go to state 51
    statements       go to state 52
    statement        go to state 53
    assignment       go to state 54
    if_statement     go to state 55
    while_statement  go to state 56
    for_statement    go to state 57
    with_statement   go to state 58
    subprogram_call  go to state 59
    io_statement     go to state 60


State 20

   70 subprograms: subprograms subprogram • ";"

    ";"  shift, and go to state 61


State 21

   72 subprogram: sub_header • ";" "forward"
   73           | sub_header • ";" declarations subprograms comp_statement

    ";"  shift, and go to state 62


State 22

    1 program: header declarations subprograms comp_statement • "."

    "."  shift, and go to state 63


State 23

   39 type_defs: "id" • "=" type_def

    "="  shift, and go to state 64


State 24

   36 typedefs: "type" type_defs • ";"
   38 type_defs: type_defs • ";" "id" "=" type_def

    ";"  shift, and go to state 65


State 25

   66 vardefs: "var" • variable_defs ";"

    "id"  shift, and go to state 66

    identifiers    go to state 67
    variable_defs  go to state 68


State 26

    3 declarations: constdefs typedefs vardefs •

    $default  reduce using rule 3 (declarations)


State 27

   17 expression: "id" • "(" expressions ")"
   21 variable: "id" •

    "("  shift, and go to state 69

    $default  reduce using rule 21 (variable)


State 28

   26 constant: "iconst" •

    $default  reduce using rule 26 (constant)


State 29

   27 constant: "rconst" •

    $default  reduce using rule 27 (constant)


State 30

   28 constant: "bconst" •

    $default  reduce using rule 28 (constant)


State 31

   29 constant: "cconst" •

    $default  reduce using rule 29 (constant)


State 32

   14 expression: "+ or -" • expression

    "id"      shift, and go to state 27
    "iconst"  shift, and go to state 28
    "rconst"  shift, and go to state 29
    "bconst"  shift, and go to state 30
    "cconst"  shift, and go to state 31
    "+ or -"  shift, and go to state 32
    "not"     shift, and go to state 33
    "("       shift, and go to state 34
    "["       shift, and go to state 35

    expression     go to state 70
    variable       go to state 37
    constant       go to state 38
    setexpression  go to state 39


State 33

   15 expression: "not" • expression

    "id"      shift, and go to state 27
    "iconst"  shift, and go to state 28
    "rconst"  shift, and go to state 29
    "bconst"  shift, and go to state 30
    "cconst"  shift, and go to state 31
    "+ or -"  shift, and go to state 32
    "not"     shift, and go to state 33
    "("       shift, and go to state 34
    "["       shift, and go to state 35

    expression     go to state 71
    variable       go to state 37
    constant       go to state 38
    setexpression  go to state 39


State 34

   19 expression: "(" • expression ")"

    "id"      shift, and go to state 27
    "iconst"  shift, and go to state 28
    "rconst"  shift, and go to state 29
    "bconst"  shift, and go to state 30
    "cconst"  shift, and go to state 31
    "+ or -"  shift, and go to state 32
    "not"     shift, and go to state 33
    "("       shift, and go to state 34
    "["       shift, and go to state 35

    expression     go to state 72
    variable       go to state 37
    constant       go to state 38
    setexpression  go to state 39


State 35

   30 setexpression: "[" • elexpressions "]"
   31              | "[" • "]"

    "id"      shift, and go to state 27
    "iconst"  shift, and go to state 28
    "rconst"  shift, and go to state 29
    "bconst"  shift, and go to state 30
    "cconst"  shift, and go to state 31
    "+ or -"  shift, and go to state 32
    "not"     shift, and go to state 33
    "("       shift, and go to state 34
    "["       shift, and go to state 35
    "]"       shift, and go to state 73

    expression     go to state 74
    variable       go to state 37
    constant       go to state 38
    setexpression  go to state 39
    elexpressions  go to state 75
    elexpression   go to state 76


State 36

    7 constant_defs: "id" "=" expression •
    8 expression: expression • "> or >= or < or <= or <>" expression
    9           | expression • "=" expression
   10           | expression • "in" expression
   11           | expression • "or" expression
   12           | expression • "+ or -" expression
   13           | expression • "* or / or div or mod or and" expression

    "> or >= or < or <= or <>"     shift, and go to state 77
    "+ or -"                       shift, and go to state 78
    "or"                           shift, and go to state 79
    "* or / or div or mod or and"  shift, and go to state 80
    "in"                           shift, and go to state 81
    "="                            shift, and go to state 82

    $default  reduce using rule 7 (constant_defs)


State 37

   16 expression: variable •
   22 variable: variable • "." "id"
   23         | variable • "[" expressions "]"

    "."  shift, and go to state 83
    "["  shift, and go to state 84

    $default  reduce using rule 16 (expression)


State 38

   18 expression: constant •

    $default  reduce using rule 18 (expression)


State 39

   20 expression: setexpression •

    $default  reduce using rule 20 (expression)


State 40

    6 constant_defs: constant_defs ";" "id" • "=" expression

    "="  shift, and go to state 85


State 41

   74 sub_header: "function" "id" • formal_parameters ":" standard_type
   76           | "function" "id" •

    "("  shift, and go to state 86

    ":"       reduce using rule 78 (formal_parameters)
    $default  reduce using rule 76 (sub_header)

    formal_parameters  go to state 87


State 42

   75 sub_header: "procedure" "id" • formal_parameters

    "("  shift, and go to state 86

    $default  reduce using rule 78 (formal_parameters)

    formal_parameters  go to state 88


State 43

   97 if_statement: "if" • expression "then" statement if_tail

    "id"      shift, and go to state 27
    "iconst"  shift, and go to state 28
    "rconst"  shift, and go to state 29
    "bconst"  shift, and go to state 30
    "cconst"  shift, and go to state 31
    "+ or -"  shift, and go to state 32
    "not"     shift, and go to state 33
    "("       shift, and go to state 34
    "["       shift, and go to state 35

    expression     go to state 89
    variable       go to state 37
    constant       go to state 38
    setexpression  go to state 39


State 44

  100 while_statement: "while" • expression "do" statement

    "id"      shift, and go to state 27
    "iconst"  shift, and go to state 28
    "rconst"  shift, and go to state 29
    "bconst"  shift, and go to state 30
    "cconst"  shift, and go to state 31
    "+ or -"  shift, and go to state 32
    "not"     shift, and go to state 33
    "("       shift, and go to state 34
    "["       shift, and go to state 35

    expression     go to state 90
    variable       go to state 37
    constant       go to state 38
    setexpression  go to state 39


State 45

  101 for_statement: "for" • "id" ":=" iter_space "do" statement

    "id"  shift, and go to state 91


State 46

  104 with_statement: "with" • variable "do" statement

    "id"  shift, and go to state 92

    variable  go to state 93


State 47

  107 io_statement: "read" • "(" read_list ")"

    "("  shift, and go to state 94


State 48

  108 io_statement: "write" • "(" write_list ")"

    "("  shift, and go to state 95


State 49

   21 variable: "id" •
  105 subprogram_call: "id" •
  106                | "id" • "(" expressions ")"

    "("  shift, and go to state 96

    "end"     reduce using rule 105 (subprogram_call)
    "else"    reduce using rule 105 (subprogram_call)
    ";"       reduce using rule 105 (subprogram_call)
    $default  reduce using rule 21 (variable)


State 50

   22 variable: variable • "." "id"
   23         | variable • "[" expressions "]"
   95 assignment: variable • ":=" expression
   96           | variable • ":=" "string"

    "."   shift, and go to state 83
    "["   shift, and go to state 84
    ":="  shift, and go to state 97


State 51

   93 statement: comp_statement •

    $default  reduce using rule 93 (statement)


State 52

   83 comp_statement: "begin" statements • "end"
   84 statements: statements • ";" statement

    "end"  shift, and go to state 98
    ";"    shift, and go to state 99


State 53

   85 statements: statement •

    $default  reduce using rule 85 (statements)


State 54

   86 statement: assignment •

    $default  reduce using rule 86 (statement)


State 55

   87 statement: if_statement •

    $default  reduce using rule 87 (statement)


State 56

   88 statement: while_statement •

    $default  reduce using rule 88 (statement)


State 57

   89 statement: for_statement •

    $default  reduce using rule 89 (statement)


State 58

   90 statement: with_statement •

    $default  reduce using rule 90 (statement)


State 59

   91 statement: subprogram_call •

    $default  reduce using rule 91 (statement)


State 60

   92 statement: io_statement •

    $default  reduce using rule 92 (statement)


State 61

   70 subprograms: subprograms subprogram ";" •

    $default  reduce using rule 70 (subprograms)


State 62

   72 subprogram: sub_header ";" • "forward"
   73           | sub_header ";" • declarations subprograms comp_statement

    "const"    shift, and go to state 6
    "forward"  shift, and go to state 100

    $default  reduce using rule 5 (constdefs)

    declarations  go to state 101
    constdefs     go to state 8


State 63

    1 program: header declarations subprograms comp_statement "." •

    $default  reduce using rule 1 (program)


State 64

   39 type_defs: "id" "=" • type_def

    "array"   shift, and go to state 102
    "set"     shift, and go to state 103
    "record"  shift, and go to state 104
    "id"      shift, and go to state 105
    "iconst"  shift, and go to state 106
    "bconst"  shift, and go to state 107
    "cconst"  shift, and go to state 108
    "+ or -"  shift, and go to state 109
    "("       shift, and go to state 110

    type_def  go to state 111
    limit     go to state 112


State 65

   36 typedefs: "type" type_defs ";" •
   38 type_defs: type_defs ";" • "id" "=" type_def

    "id"  shift, and go to state 113

    $default  reduce using rule 36 (typedefs)


State 66

   65 identifiers: "id" •

    $default  reduce using rule 65 (identifiers)


State 67

   64 identifiers: identifiers • "," "id"
   69 variable_defs: identifiers • ":" typename

    ","  shift, and go to state 114
    ":"  shift, and go to state 115


State 68

   66 vardefs: "var" variable_defs • ";"
   68 variable_defs: variable_defs • ";" identifiers ":" typename

    ";"  shift, and go to state 116


State 69

   17 expression: "id" "(" • expressions ")"

    "id"      shift, and go to state 27
    "iconst"  shift, and go to state 28
    "rconst"  shift, and go to state 29
    "bconst"  shift, and go to state 30
    "cconst"  shift, and go to state 31
    "+ or -"  shift, and go to state 32
    "not"     shift, and go to state 33
    "("       shift, and go to state 34
    "["       shift, and go to state 35

    expression     go to state 117
    variable       go to state 37
    expressions    go to state 118
    constant       go to state 38
    setexpression  go to state 39


State 70

    8 expression: expression • "> or >= or < or <= or <>" expression
    9           | expression • "=" expression
   10           | expression • "in" expression
   11           | expression • "or" expression
   12           | expression • "+ or -" expression
   13           | expression • "* or / or div or mod or and" expression
   14           | "+ or -" expression •

    "* or / or div or mod or and"  shift, and go to state 80

    $default  reduce using rule 14 (expression)


State 71

    8 expression: expression • "> or >= or < or <= or <>" expression
    9           | expression • "=" expression
   10           | expression • "in" expression
   11           | expression • "or" expression
   12           | expression • "+ or -" expression
   13           | expression • "* or / or div or mod or and" expression
   15           | "not" expression •

    $default  reduce using rule 15 (expression)


State 72

    8 expression: expression • "> or >= or < or <= or <>" expression
    9           | expression • "=" expression
   10           | expression • "in" expression
   11           | expression • "or" expression
   12           | expression • "+ or -" expression
   13           | expression • "* or / or div or mod or and" expression
   19           | "(" expression • ")"

    "> or >= or < or <= or <>"     shift, and go to state 77
    "+ or -"                       shift, and go to state 78
    "or"                           shift, and go to state 79
    "* or / or div or mod or and"  shift, and go to state 80
    "in"                           shift, and go to state 81
    ")"                            shift, and go to state 119
    "="                            shift, and go to state 82


State 73

   31 setexpression: "[" "]" •

    $default  reduce using rule 31 (setexpression)


State 74

    8 expression: expression • "> or >= or < or <= or <>" expression
    9           | expression • "=" expression
   10           | expression • "in" expression
   11           | expression • "or" expression
   12           | expression • "+ or -" expression
   13           | expression • "* or / or div or mod or and" expression
   34 elexpression: expression • ".." expression
   35             | expression •

    "> or >= or < or <= or <>"     shift, and go to state 77
    "+ or -"                       shift, and go to state 78
    "or"                           shift, and go to state 79
    "* or / or div or mod or and"  shift, and go to state 80
    "in"                           shift, and go to state 81
    "="                            shift, and go to state 82
    ".."                           shift, and go to state 120

    $default  reduce using rule 35 (elexpression)


State 75

   30 setexpression: "[" elexpressions • "]"
   32 elexpressions: elexpressions • "," elexpression

    ","  shift, and go to state 121
    "]"  shift, and go to state 122


State 76

   33 elexpressions: elexpression •

    $default  reduce using rule 33 (elexpressions)


State 77

    8 expression: expression "> or >= or < or <= or <>" • expression

    "id"      shift, and go to state 27
    "iconst"  shift, and go to state 28
    "rconst"  shift, and go to state 29
    "bconst"  shift, and go to state 30
    "cconst"  shift, and go to state 31
    "+ or -"  shift, and go to state 32
    "not"     shift, and go to state 33
    "("       shift, and go to state 34
    "["       shift, and go to state 35

    expression     go to state 123
    variable       go to state 37
    constant       go to state 38
    setexpression  go to state 39


State 78

   12 expression: expression "+ or -" • expression

    "id"      shift, and go to state 27
    "iconst"  shift, and go to state 28
    "rconst"  shift, and go to state 29
    "bconst"  shift, and go to state 30
    "cconst"  shift, and go to state 31
    "+ or -"  shift, and go to state 32
    "not"     shift, and go to state 33
    "("       shift, and go to state 34
    "["       shift, and go to state 35

    expression     go to state 124
    variable       go to state 37
    constant       go to state 38
    setexpression  go to state 39


State 79

   11 expression: expression "or" • expression

    "id"      shift, and go to state 27
    "iconst"  shift, and go to state 28
    "rconst"  shift, and go to state 29
    "bconst"  shift, and go to state 30
    "cconst"  shift, and go to state 31
    "+ or -"  shift, and go to state 32
    "not"     shift, and go to state 33
    "("       shift, and go to state 34
    "["       shift, and go to state 35

    expression     go to state 125
    variable       go to state 37
    constant       go to state 38
    setexpression  go to state 39


State 80

   13 expression: expression "* or / or div or mod or and" • expression

    "id"      shift, and go to state 27
    "iconst"  shift, and go to state 28
    "rconst"  shift, and go to state 29
    "bconst"  shift, and go to state 30
    "cconst"  shift, and go to state 31
    "+ or -"  shift, and go to state 32
    "not"     shift, and go to state 33
    "("       shift, and go to state 34
    "["       shift, and go to state 35
